[project]
name = "fleetbot"
version = "0.1.0"
description = "Discord bot for fleet-command — NB source tracking & project automation"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3.0",
    "httpx>=0.28.1",
    "notion-client>=2.2.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
]
